--- a/index.html
+++ b/index.html
@@ -28,8 +28,43 @@
                 <p>Your one-stop destination for delicious food</p>
                 <button class="button">Order Now</button>
          </section>
+          
+         <section class="section" id="demo2">
+            <h2>About Us</h2>
+            <p>We are dedicated to bringing you the best food experience with a wide variety of cuisines.</p>
+            <img src="photos\Me.886.jpg" alt="About Us Image" class="about-image">
+         </section>
 
 
+         <section class="section" id="demo3">
+            <h2>Our Services</h2>
+            <ul class="services-list">
+                <li>Home Delivery</li>
+                <li>Catering Services</li>
+                <li>Online Ordering</li>
+                <li>Custom Meal Plans</li>
+            </ul>
+            <div class="service-container">
+                <div class="service-item">
+                    <img src="photos\Me.886.jpg" alt="Service Image 1">
+                    <h3>Home Delivery</h3>
+                    <p>Get your favorite meals delivered to your doorstep.</p>
+                </div>
+
+                <div class="service-item">
+                    <img src="photos\Me.886.jpg" alt="Service Image 2">
+                    <h3>Catering Services</h3>
+                    <p>We provide catering for all your events and parties.</p>
+                </div>
+
+                <div class="service-item">
+                    <img src="photos\Me.886.jpg" alt="Service Image 3">
+                    <h3>Online Ordering</h3>
+                    <p>Order your meals online and enjoy hassle-free service.</p>
+                </div>
+                
+            </div>
+         </section>
 
     </body>
 </html> 
