--- a/index.html
+++ b/index.html
@@ -100,7 +100,21 @@
              </div>
       </section>
           
-      
+      <section class="our portifiolio" id="demo6">
+        <h2>our portifiolio</h2>
+        <div class="portifolio-container">
+            <div class="portifolio-item">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+
+            </div>
+        </div>
+      </section>
 
     </body>
 </html> 
