--- a/viewmenu.html
+++ b/viewmenu.html
@@ -11,11 +11,11 @@
         <h1>View Menu</h1>
         <p>This section allows you to view the menu items available in the application.</p>
         <div class="menu-btn">
-            <button>breakfast</button>
-            <button>lunch</button>
-            <button>dinner</button>
-            <button>snacks</button>
-            <button>drinks</button>
+           <a href="breakfast.html"><button>breakfast</button><a>
+              <a href="lunch.html"><button>lunch</button></a>
+              <a href="dinner.html"><button>dinner</button></a>
+                <a href="drinks.html"><button>drinks</button></a>
+                <a href="viewmenu.html"><button>view menu</button></a>
         </div>
 
 
