--- a/index.html
+++ b/index.html
@@ -227,16 +227,21 @@
         <h2>Testimonials</h2>
         <div class="testimonial-container">
             <div class="testimonial-item">
+                <img src="photos\Me.886.jpg" alt="Testimonial Image">
                 <p>"The food was amazing! Best service ever!"</p>
                 <h4>- John Doe</h4>
             </div>
 
             <div class="testimonial-item">
+                <img src="photos\Me.886.jpg" alt="Testimonial Image">
+
                 <p>"I love the variety of dishes available."</p>
                 <h4>- Jane Smith</h4>
             </div>
 
             <div class="testimonial-item">
+                <img src="photos\Me.886.jpg" alt="Testimonial Image">
+
                 <p>"Great experience, will definitely order again!"</p>
                 <h4>- Alice Johnson</h4>
             </div>
