--- a/index.html
+++ b/index.html
@@ -26,13 +26,28 @@
          </section>
 
          <section class="section" id="demo1">
-            <h1>Welcome to Food Hub</h1>
-            <p>Your one-stop destination for delicious food and exceptional service.</p>
-            <img src="photos\Me.886.jpg" alt="Food Hub Image" class="hero-image">
-            <div class="button-container">
-                <button class="btn">Order Now</button>
-                <button class="btn">View Menu</button>
+            <h1 class="pp1">Welcome to Food Hub</h1>
+            <p class="pp2">Your one-stop destination for delicious food and exceptional service.</p>
+             <div class="button-container">
+                <button class="btn1">Order Now</button>
+                <button class="btn2">View Menu</button>
             </div>
+        <div class="star-cards">
+            <div class="star-card">
+                <p>24/7</p>
+                <h2>icon</h2>
+            </div>
+            <div class="star-card">
+                <p>Customer</p>
+                <h2>icon</h2>
+            </div>
+            <div class="star-card">
+                <p>expert</p>
+                <h2>icon</h2>
+            </div>
+
+        </div>
+
             </section>
           
          <section class="section" id="demo2">
