--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <section class="section" id="demo">
             <div class="header">
                 <div class="logo">
-                    <img src="photos\Me.886.jpg" height="100px" width="100px">
+                    <h2>foodhub</h2>
                 </div>
                 <div class="nav">
                     <ul class="nav-list">
@@ -34,15 +34,15 @@
             </div>
         <div class="star-cards">
             <div class="star-card">
-                <p>24/7</p>
+                <p class="pp3">24/7</p>
                 <h2>icon</h2>
             </div>
             <div class="star-card">
-                <p>Customer</p>
+                <p class="pp3">Customer</p>
                 <h2>icon</h2>
             </div>
             <div class="star-card">
-                <p>expert</p>
+                <p class="pp3">expert</p>
                 <h2>icon</h2>
             </div>
 
@@ -51,14 +51,16 @@
             </section>
           
          <section class="section" id="demo2">
-            <h2>About Us</h2>
-            <p>We are dedicated to bringing you the best food experience with a wide variety of cuisines.</p>
+            <div class="about-image-container">
+            <h2 class="section-title">About Us</h2>
+            <p class="pp2-about-us">We are dedicated to bringing you the best food experience with a wide variety of cuisines.</p>
             <img src="photos\Me.886.jpg" alt="About Us Image" class="about-image">
+            </div>
          </section>
 
 
          <section class="section" id="demo3">
-            <h2>Our Services</h2>
+            <h2 class="section-title">Our Services</h2>
            
             <div class="service-container">
                 <div class="service-item">
