--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       </section>
           
       <section class="our portifiolio" id="demo6">
-        <h2>our portifiolio</h2>
+        <h2 class="section-title">our portifiolio</h2>
         <div class="portifolio-container">
             <div class="portifolio-item">
                 <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
@@ -132,6 +132,9 @@
                 <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
                 <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
                 <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                <img src="photos\Me.886.jpg" alt="Portfolio Image 1">
+                
+
 
             </div>
         </div>
