offer stsyles added on

--- a/index.html
+++ b/index.html
@@ -141,9 +141,8 @@
       </section>
         
       <section class="section" id="demo7">
-        <h2>Best offers</h2>
+        <h2 class="section-title">Best offers</h2>
             <div class="offer-item">
-                <img src="photos\Me.886.jpg" alt="Offer Image 2">
                 <h3>Buy One Get One Free</h3>
                 <p>On selected items every Friday.</p>
                 <button class="offer-btn">Order Now</button>
