--- a/index.html
+++ b/index.html
@@ -151,30 +151,33 @@
       </section>
 
          <section class="section"id=demo8>
-            <h2>featured treates</h2>
+            <h2 class="section-title">featured treates</h2>
             <div class="featured-container">
                 <div class="featured-item">
                     <img src="photos\Me.886.jpg" alt="Featured Treat 1">
                     <h3>Chocolate Cake</h3>
                     <p>Rich and moist chocolate cake with creamy frosting.</p>
+                    <button class="featured-btn">Order Now</button>
                 </div>
 
                 <div class="featured-item">
                     <img src="photos\Me.886.jpg" alt="Featured Treat 2">
                     <h3>Fruit Tart</h3>
                     <p>Delicious tart filled with fresh seasonal fruits.</p>
+                    <button class="featured-btn">Order Now</button>
                 </div>
 
                 <div class="featured-item">
                     <img src="photos\Me.886.jpg" alt="Featured Treat 3">
                     <h3>Cheesecake</h3>
                     <p>Classic cheesecake with a buttery graham cracker crust.</p>
+                    <button class="featured-btn">Order Now</button>
                 </div>
             </div>
          </section>
 
            <section class="section" id="demo8">
-        <h2>Special Events</h2>
+        <h2 class="section-title">Special Events</h2>
         <div class="event-container">
             <div class="event-item">
                 <img src="photos\Me.886.jpg" alt="Event Image 1">
