--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
            </section>
           
            <section class="section"id="demo9">
-            <h2>our team</h2>
+            <h2 class="section-title">our team</h2>
             <div class="team-container">
                 <div class="team-member">
                     <img src="photos\Me.886.jpg" alt="Team Member 1">
