locations added on

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
       <section class="section" id="demo8">
-        <h2>Contact Us</h2>
+        <h2 class="section-title">Contact Us</h2>
         <div class="contact-container" id="demo9">
             <div class="locaions">
                 <h3>Our Locations</h3>
