--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       
 
       <section class="section" id="demo10">
-        <h2>Testimonials</h2>
+        <h2 class="section-title">Testmonies</h2>
         <div class="testimonial-container">
             <div class="testimonial-item">
                 <img src="photos\Me.886.jpg" alt="Testimonial Image">
