--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
             <div class="footer-content">
                 <h1>food hub</h1>
                 <div class="footer-log">
-                    <img src="photos\Me.886.jpg" alt="Logo" class="footer-log">
+                    <img src="photos\Me.886.jpg " width="100px" height="100px" alt="Food Hub Logo">
                 </div>
                 <div class="footer-links">
                     <div class="grp1">
