--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="offer-item">
                 <h3>Buy One Get One Free</h3>
                 <p>On selected items every Friday.</p>
-                <button class="offer-btn">Order Now</button>
+                <button class="offer-btn" id="offer" onclick="function()">Order Now</button>
             </div>
             </div>
       </section>
@@ -215,23 +215,27 @@
                     <img src="photos\Me.886.jpg" alt="Team Member 1">
                     <h3>Chef John</h3>
                     <p>Head Chef with over 10 years of experience in culinary arts.</p>
+                    <h1>social-icons</h1>
                 </div>
 
                 <div class="team-member">
                     <img src="photos\Me.886.jpg" alt="Team Member 2">
                     <h3>Sarah Smith</h3>
                     <p>Customer Service Manager dedicated to providing the best service.</p>
+                    <h1>social-icons</h1>
                 </div>
 
                 <div class="team-member">
                     <img src="photos\Me.886.jpg" alt="Team Member 3">
                     <h3>Mike Johnson</h3>
                     <p>Marketing Specialist focused on bringing our food to the world.</p>
+                    <h1>social-icons</h1>
                 </div>
                 <div class="team-member">
                     <img src="photos\Me.886.jpg" alt="Team Member 4">
                     <h3>Mike Johnson</h3>
                     <p>Marketing Specialist focused on bringing our food to the world.</p>
+                    <h1>social-icons</h1>
                 </div>
            </section>
 
@@ -337,7 +341,7 @@
                 <p>Your one-stop destination for delicious food and exceptional service.</p>
                 <p>get in touch with us</p>
                 <button class="footer-btn">Contact Us</button>
-             </div><hr>
+             </div><br><hr>
             <div class="footer-content">
                 <h1>food hub</h1>
                 <div class="footer-log">
