--- a/breakfast.html
+++ b/breakfast.html
@@ -51,6 +51,32 @@
                <button>add to chart</button> <button>order</button>
             </div>
 
+
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+            <div class="break">
+               <img src="" height="200px"width="200px">
+               <button>add to chart</button> <button>order</button>
+            </div>
+
         </div>
 
     </section>
