--- a/dinner.html
+++ b/dinner.html
@@ -6,6 +6,63 @@
     <title>dinner</title>
 </head>
 <body>
-    
+    <section class="dinner">
+        <h1>dinner</h1>
+        <div class="dinner-container"id="wrapp">
+            <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+            
+              <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+
+             <div class="dinner-card">
+             <img src=""height="200px"width="200px">
+             <button>Details</button> <button>order</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
