--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="offer-item">
                 <h3>Buy One Get One Free</h3>
                 <p>On selected items every Friday.</p>
-                <button class="offer-btn" id="offer" onclick="function()">Order Now</button>
+                <button class="offer-btn" id="offer">Order Now</button>
             </div>
             </div>
       </section>
