--- a/index.html
+++ b/index.html
@@ -287,26 +287,31 @@
         </div>
           
 
-        <section class="section" id="demo11">
-            <h2>Frequently Asked Questions</h2>
-            <div class="faq-container">
-                <div class="faq-item">
-                    <h3>What are your delivery hours?</h3>
-                    <p>We deliver from 10 AM to 10 PM daily.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>Do you offer vegetarian options?</h3>
-                    <p>Yes, we have a wide range of vegetarian dishes available.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>Can I customize my order?</h3>
-                    <p>Absolutely! You can customize your order to suit your preferences.</p>
-                </div>
+       <section class="section" id="demo11">
+    <h2>Frequently Asked Questions</h2>
+    <div class="faq-container">
+        <div class="faq-item">
+            <h3 class="faq-question">What are your delivery hours? <span class="toggle-icon">+</span></h3>
+            <div class="faq-answer">
+                <p>We deliver from 10 AM to 10 PM daily.</p>
             </div>
-        </section>
+        </div>
 
+        <div class="faq-item">
+            <h3 class="faq-question">Do you offer vegetarian options? <span class="toggle-icon">+</span></h3>
+            <div class="faq-answer">
+                <p>Yes, we have a wide range of vegetarian dishes available.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <h3 class="faq-question">Can I customize my order? <span class="toggle-icon">+</span></h3>
+            <div class="faq-answer">
+                <p>Absolutely! You can customize your order to suit your preferences.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section class="section"id="demo12">
             <h2>blogs</h2>
