--- a/drinks.html
+++ b/drinks.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>drinks</title>
 </head>
 <body>
-    
+        <div class="container" id="wrapp">
+            <div class="drinks-container"id="wrapper">
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+
+                <div class="drinks-card">
+                    <img src="" height="200px" width="200px">
+                    <button>Details</button> <button>order</button>
+                </div>
+            </div>
+
+        </div>
 </body>
 </html>
