--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     <h1>social-icons</h1>
                 </div>
                 <div class="team-member">
-                    <img src="photos\Me.886.jpg" alt="Team Member 4">
+                    <img src="photos/Me.886.jpg" alt="Team Member 4">
                     <h3>Mike Johnson</h3>
                     <p>Marketing Specialist focused on bringing our food to the world.</p>
                     <h1>social-icons</h1>
