--- a/chechout.html
+++ b/chechout.html
@@ -6,6 +6,10 @@
     <title>checkout for order</title>
 </head>
 <body>
-    
+    <section>
+        <div>
+            
+        </div>
+    </section>
 </body>
 </html>
