commit changes made

--- a/menu.html
+++ b/menu.html
@@ -462,6 +462,14 @@
                 max-width: 100%;
             }
         }
+        .BACK{
+             color: #ff4757;
+            background: none;
+            border: none;
+            cursor: pointer;
+            font-size: 1.2rem;
+            margin-left: 15px;
+        }
     </style>
 </head>
 <body>
@@ -473,6 +481,7 @@
         <div class="logo">
             <i class="fas fa-utensils"></i>
             <h2><span>Food</span>Hub</h2>
+            <a href="index.html "><button class="BACK">BACK TO HOME</button></a>
         </div>
         <div></div> <!-- Empty div for alignment -->
     </div>
