new comments add

--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
                     <h3>Services</h3>
                     <ul>
                         <li><a href="#">Home Delivery</a></li>
-                        <li><a href="#">Catering</a></li>
+                        <li><a href="Catering.html">Catering</a></li>
                         <li><a href="#">Online Ordering</a></li>
                         <li><a href="#">Meal Plans</a></li>
                         <li><a href="#">Gift Cards</a></li>
