--- a/index.html
+++ b/index.html
@@ -986,9 +986,9 @@
                     <ul>
                         <li><a href="#">Home Delivery</a></li>
                         <li><a href="Catering.html">Catering</a></li>
-                        <li><a href="#">Online Ordering</a></li>
+                        <li><a href="ordering.html">Online Ordering</a></li>
                         <li><a href="#">Meal Plans</a></li>
-                        <li><a href="#">Gift Cards</a></li>
+                        <li><a href="giftcard.html">Gift Cards</a></li>
                     </ul>
                 </div>
                 <div class="footer-contact">
