services added on

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>Welcome to Food Hub</h1>
                 <p>Your one-stop destination for delicious food and exceptional service.</p>
                 <div class="button-container">
-                    <a href=" menu.html"><button class="btn btn-secondary">View Menu</button></a>
+                    <a href="menu2.html "><button class="btn btn-secondary">View Menu</button></a>
                 </div>
                 <div class="features-grid">
                     <div class="feature-card">
@@ -337,6 +337,23 @@
                         <h3>Fruit Parfait</h3>
                     </div>
                 </div>
+
+
+                  <div class="portfolio-item">
+                    <img src="   foodhub/pizzza.jpg  " alt="Food Item 2">
+                    <div class="portfolio-overlay">
+                        <h3>Grilled Salmon</h3>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="  foodhub/win.jpg " alt="Food Item 3">
+                    <div class="portfolio-overlay">
+                        <h3>Vegetable Stir Fry</h3>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </section>
@@ -366,7 +383,7 @@
         <div class="featured-grid">
             <!-- Chocolate Cake Card -->
             <div class="featured-card">
-                <img src="photos/cool.jpg" alt="Chocolate Cake">
+                <img src="foodhub/choclate.jpg" alt="Chocolate Cake">
                 <div class="featured-info">
                     <h3>Chocolate Cake</h3>
                     <p>Rich and moist chocolate cake with creamy frosting.</p>
@@ -376,7 +393,7 @@
                                 data-item="Chocolate Cake" 
                                 data-desc="Rich and moist chocolate cake with creamy frosting" 
                                 data-price="55500" 
-                                data-img="photos/cool.jpg">
+                                data-img="foodhub/choclate.jpg">
                             Order Now
                         </button>
                     </div>
@@ -385,7 +402,7 @@
             
             <!-- Fruit Tart Card -->
             <div class="featured-card">
-                <img src="photos/good.jpg" alt="Fruit Tart">
+                <img src="foodhub/fruit tart.jpg" alt="Fruit Tart">
                 <div class="featured-info">
                     <h3>Fruit Tart</h3>
                     <p>Delicious tart filled with fresh seasonal fruits.</p>
@@ -395,7 +412,7 @@
                                 data-item="Fruit Tart" 
                                 data-desc="Delicious tart filled with fresh seasonal fruits" 
                                 data-price="37000" 
-                                data-img="photos/good.jpg">
+                                data-img="foodhub/fruit tart.jpg">
                             Order Now
                         </button>
                     </div>
@@ -404,7 +421,7 @@
             
             <!-- Cheesecake Card -->
             <div class="featured-card">
-                <img src="photos/best.jpg" alt="Cheesecake">
+                <img src="foodhub/cheesescake.jpg" alt="Cheesecake">
                 <div class="featured-info">
                     <h3>Cheesecake</h3>
                     <p>Classic cheesecake with a buttery graham cracker crust.</p>
@@ -414,7 +431,7 @@
                                 data-item="Cheesecake" 
                                 data-desc="Classic cheesecake with a buttery graham cracker crust" 
                                 data-price="44400" 
-                                data-img="photos/best.jpg">
+                                data-img="foodhub/cheesescake.jpg">
                             Order Now
                         </button>
                     </div>
@@ -669,7 +686,7 @@
             <p class="section-subtitle">Meet the talented people behind Food Hub</p>
             <div class="team-grid">
                 <div class="team-card">
-                    <img src="photos/roshan11.jpeg" alt="Chef John">
+                    <img src=" foodhub/pp one.jpg" alt="Chef John">
                     <div class="team-info">
                         <h3>Chef John</h3>
                         <p class="position">Head Chef</p>
@@ -682,7 +699,7 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img src="photos/roshan11.jpeg" alt="Sarah Smith">
+                    <img src="foodhub/pp4.jpg " alt="Sarah Smith">
                     <div class="team-info">
                         <h3>Sarah Smith</h3>
                         <p class="position">Customer Service Manager</p>
@@ -695,7 +712,7 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img src="photos/roshan11.jpeg" alt="Mike Johnson">
+                    <img src="foodhub/ppp2.jpg" alt="Mike Johnson">
                     <div class="team-info">
                         <h3>Mike Johnson</h3>
                         <p class="position">Marketing Specialist</p>
@@ -708,7 +725,7 @@
                     </div>
                 </div>
                 <div class="team-card">
-                    <img src="photos/roshan11.jpeg" alt="Lisa Chen">
+                    <img src=" foodhub/ppp3.jpg" alt="Lisa Chen">
                     <div class="team-info">
                         <h3>Lisa Chen</h3>
                         <p class="position">Pastry Chef</p>
